# longan_nano_rust_wsl2_platformio_setup

./: .gitattributes  .gitignore  Cargo.toml  README.md  platformio.ini
.cargo/: config.toml
src/: lib.rs
