[package]
name = "longan_nano_rust_wsl2_platformio_setup"
edition = "2018"
version = "0.1.0"
authors = []
keywords = []
categories = []
autobins = true
autoexamples = true
autotests = true
autobenches = true
publish = true

[dependencies]
riscv-rt = "0.8.0"
longan-nano = "0.2.0"

[dev-dependencies]

[build-dependencies]

[target]

[features]

[patch]

[lib]
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2018"
crate-type = ["staticlib"]
required-features = []

[profile]
[badges.maintenance]
status = "none"
